[package]
name = "graph_mvcc"
version = "0.1.0"
edition = "2021"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
description = "Rust library for working with Multi-Version Concurrency Control in Graph Databases."
documentation = "https://docs.rs/graph_mvcc"
homepage = "https://github.com/cryptopatrick/graph_mvcc"
repository = "https://github.com/cryptopatrick/graph_mvcc"
readme = "README.md"
keywords = ["mvcc", "graph", "database"]
license = "Unlicense/MIT"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]