[package]
name = "graph_mvcc"
version = "0.2.0"
edition = "2021"
authors = ["cryptopatrick <cryptopatrick@gmail.com>"]
description = "Rust library for working with Multi-Version Concurrency Control in Graph Databases."
documentation = "https://docs.rs/graph_mvcc"
homepage = "https://github.com/cryptopatrick/graph_mvcc"
repository = "https://github.com/cryptopatrick/graph_mvcc"
readme = "README.md"
keywords = ["mvcc", "graph", "database"]
license = "MIT"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

